update resume; adjust styling, new font, fix name overflow; hide j-game on mobile

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -8,7 +8,7 @@
 			--medium-blue: #0066aa;
 			--light-blue: #04b1ff;
 			--shadow-size: 5px;
-			--font-family: "Roboto", sans-serif;
+			--font-family: "Alata", sans-serif;
 			--small-gap-size: 10px;
 			--medium-gap-size: 20px;
 			--large-gap-size: 40px;
@@ -103,12 +103,17 @@
 			float: left;
 			font-weight: normal;
 			user-select: none;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
 			cursor: default;
 			font-size: var(--large-font-size);
 			color: var(--light-gray);
 			height: calc(var(--image-size) / 2);
 			width: 100%;
 			margin: 0;
+			margin-bottom: ;
 			padding: 0;
 			line-height: 1;
 		}
@@ -116,6 +121,10 @@
 		#info-bio {
 			float: left;
 			user-select: none;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
 			font-size: var(--small-font-size);
 			color: var(--light-gray);
 			cursor: default;
@@ -145,8 +154,13 @@
 			height: calc(var(--image-size) / 4);
 			list-style-type: none;
 			user-select: none;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
 			padding: 0;
 			margin: 0;
+			overflow: hidden;
 		}
 
 		#info-links li {
@@ -211,7 +225,6 @@
 		background-color: var(--dark-gray);
 		text-align: center;
 		box-shadow: 0 0 var(--shadow-size) var(--dark-gray);
-		user-select: none;
 	}
 
 	#navigation-search {
@@ -249,24 +262,41 @@
 			background-color: var(--dark-gray);
 			overflow: hidden;
 			box-shadow: 0 0 var(--shadow-size) var(--dark-gray);
+			scrollbar-width: 0;
+			-ms-overflow-style: none;
 		}
 
-		.project-name {
+		.project-name-outer {
 			float: left;
 			width: 100%;
 			height: var(--medium-font-size);
-			font-size: var(--medium-font-size);
-			font-weight: normal;
+			padding: 0;
+			white-space: nowrap;
+			overflow-y: hidden;
+			overflow-x: scroll;
+			text-overflow: ellipsis;
 			margin: 0;
 			margin-bottom: var(--small-gap-size);
 			text-align: center;
+			scrollbar-width: 0;
+			-ms-overflow-style: none;
+		}
+
+		.project-name {
+			width: auto;
+			height: auto;
+			font-size: var(--medium-font-size);
+			font-weight: normal;
 			text-transform: uppercase;
-			user-select: none;
+			line-height: 1;
 			color: var(--light-gray);
-			padding: 0;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			user-select: none;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
+			scrollbar-width: 0;
+			-ms-overflow-style: none;
 		}
 
 		.project-image {
@@ -277,6 +307,10 @@
 			background-size: cover;
 			background-repeat: no-repeat;
 			user-select: none;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
 			border-radius: var(--border-radius);
 		}
 
@@ -289,6 +323,10 @@
 			margin-left: var(--small-gap-size);
 			font-size: var(--small-font-size);
 			user-select: none;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			-o-user-select: none;
 			color: #dddddd;
 			overflow: hidden;
 			text-align: left;
@@ -320,8 +358,6 @@
 	}
 
 	#back-to-top {
-		text-align: center;
-		transform: translateX(-50%);
 		color: var(--light-blue);
 		font-size: var(--icon-size);
 		cursor: pointer;
@@ -446,7 +482,7 @@
 	/** mobile **/
 		@media screen and (max-width: 799px) {
 			/* info */
-				#info, #info-name, #info-content, #info-bio {
+				#info, #info-content, #info-name, #info-bio {
 					height: auto;
 					text-align: center;
 				}
@@ -457,7 +493,11 @@
 
 				#info-content, #info-name, #info-bio {
 					width: 100%;
-					margin-bottom: var(--gap-size);
+					margin-bottom: var(--small-gap-size);
+				}
+
+				#j-logo {
+					display: none;
 				}
 
 			/* projects */
@@ -475,7 +515,7 @@
 				.project-summary {
 					width: 100%;
 					margin-left: 0;
-					margin-top: var(--gap-size);
+					margin-top: var(--small-gap-size);
 					height: auto;
 				}
 		}
